# TZ-Foxford

./: .example.env  .gitignore  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: a1e5a84c7c62_.py  eff3bc9f6ae4_.py
infra/: docker-compose.local.yml  docker-compose.yml
src/app/: Dockerfile  main.py
src/app/api/: __init__.py  routers.py  validators.py
src/app/api/endpoints/: __init__.py  client.py  message.py  ticket.py  user.py
src/app/core/: __init__.py  base.py  config.py  db.py  init_db.py  publisher.py  rabbit.py  user.py
src/app/crud/: base.py  client.py  message.py  ticket.py
src/app/models/: __init__.py  client.py  message.py  ticket.py  user.py
src/app/schemas/: client.py  message.py  ticket.py
src/bot/: .env  .example.env  Dockerfile  config.py  consumer.py  main.py
